--- a/src/app/login/components/login-form.scss
+++ b/src/app/login/components/login-form.scss
@@ -3,7 +3,7 @@
   border-radius: 4px;
   border: 2px solid #f6f6f6;
   padding: 16px;
-  max-width: 400px;
+  max-width: 600px;
   outline: none;
 }
 
@@ -13,6 +13,36 @@
   border: none;
   background-color: #000000;
   color: #fff;
-  max-width: 400px;
+  max-width: 600px;
   font-weight: 500;
+
+  &:hover {
+    opacity: 0.4;
+  }
+}
+
+.text-bl {
+  width: 20%;
+}
+
+.nav-btn {
+  color: #aa11ac;
+  &:hover {
+    opacity: 0.4;
+  }
+}
+
+.third-party-btn {
+  height: 44px;
+  border: 2px solid #f6f6f6;
+  border-radius: 4px;
+  font-weight: 500;
+
+  img {
+    width: 20px;
+  }
+
+  &:hover {
+    background-color: #f6f6f6;
+  }
 }
